@@ -47,6 +47,11 @@ public class UploadServlet extends JAMWikiServlet {
 	 *
 	 */
 	protected ModelAndView handleJAMWikiRequest(HttpServletRequest request, HttpServletResponse response, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
+		// verify that the user is not blocked from uploading
+		ModelAndView blockedUserModelAndView = ServletUtil.viewIfBlocked(request, pageInfo);
+		if (blockedUserModelAndView != null) {
+			return blockedUserModelAndView;
+		}
 		String contentType = ((request.getContentType() != null) ? request.getContentType().toLowerCase() : "" );
 		if (contentType.indexOf("multipart") == -1) {
 			view(request, next, pageInfo);
